--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,9 @@ cmake_minimum_required(VERSION 3.22)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 # "Trim" the build. Include the minimal set of components, main, and anything it depends on.
 idf_build_set_property(MINIMAL_BUILD OFF)
+set(EXTRA_COMPONENT_DIRS 
+    ${EXTRA_COMPONENT_DIRS} 
+    "${CMAKE_CURRENT_SOURCE_DIR}/components"
+    "${CMAKE_CURRENT_SOURCE_DIR}/Bus")
 project(esp32_s3-rt)
+
