--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
   "idf.openOcdConfigs": [
     "board/esp32s3-builtin.cfg"
   ],
-  "idf.portWin": "COM1",
+  "idf.portWin": "COM4",
   "idf.toolsPathWin": "D:\\esp\\.espressif",
   "idf.customExtraVars": {
     "IDF_TARGET": "esp32s3"
@@ -28,7 +28,10 @@
     "string": "c",
     "string_view": "c",
     "ranges": "c",
-    "span": "c"
+    "span": "c",
+    "freertos.h": "c",
+    "sdkconfig.h": "c",
+    "stdio.h": "c"
 },
 "idf.flashType": "JTAG"
 }
