增加ble，但是编译还没通过

--- a/Bus/CMakeLists.txt
+++ b/Bus/CMakeLists.txt
@@ -1,3 +1,5 @@
-idf_component_register(SRCS "I2C/I2c_ctrl.c"  # 根据实际源文件名调整
+idf_component_register(SRCS "I2C/I2c_ctrl.c" Ble/ble_gatt.c  # 根据实际源文件名调整
                        INCLUDE_DIRS "include"
-                       REQUIRES driver)
+                       REQUIRES driver
+                       nvs_flash
+                       bt)
