数据转过来了，编译过了，还不能通过蓝牙发送出去，heart的貌似有限制，led的没有能发送的特征值，待进一步查看案例

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,6 @@
     "sdkconfig.h": "c",
     "stdio.h": "c"
 },
-"idf.flashType": "JTAG"
+"idf.flashType": "JTAG",
+"idf.currentSetup": "D:\\esp\\v5.5.1\\esp-idf"
 }
